Eliminated SIMD and reliance on incubating vector class. Added SWAR back based on (limited) performance testing. Simplified FTLParser accordingly.